Added basic structure

--- a/src/js/views/patterns.html
+++ b/src/js/views/patterns.html
@@ -3,8 +3,8 @@
  The Universal Permissive License (UPL), Version 1.0
  -->
 <div class="oj-hybrid-padding">
-  <h1>Collections Content Area</h1>
+  <h1>Patterns Content Area</h1>
   <div>
-    Collections
+    Patterns
   </div>
 </div>
