--- a/src/js/views/controls.html
+++ b/src/js/views/controls.html
@@ -3,8 +3,8 @@
  The Universal Permissive License (UPL), Version 1.0
  -->
 <div class="oj-hybrid-padding">
-  <h1>Collections Content Area</h1>
+  <h1>Controls Content Area</h1>
   <div>
-    Collections
+    Controls
   </div>
 </div>
