--- a/src/js/views/layout.html
+++ b/src/js/views/layout.html
@@ -3,8 +3,8 @@
  The Universal Permissive License (UPL), Version 1.0
  -->
 <div class="oj-hybrid-padding">
-  <h1>Collections Content Area</h1>
+  <h1>Layout & Nav Content Area</h1>
   <div>
-    Collections
+    Layout & Nav
   </div>
 </div>
