--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -5,3 +5,9 @@
     Description:
         This is where any of your application specific styles should be included
 */
+
+@import 'collections';
+
+body {
+  // color: red;
+}
