Added flex layout and theme

--- a/src/js/views/collections.html
+++ b/src/js/views/collections.html
@@ -4,7 +4,7 @@
  -->
 <div class="oj-hybrid-padding">
   <div>
-    <div class="collections-container">
+    <div class="oj-flex collections-container">
       <div id="tabbarcontainer" data-bind="style: {'maxWidth':(edge() === 'end' || edge() === 'start') ? '250px':''}">
         <oj-tab-bar drill-mode="none" display="[[display]]" edge="[[edge]]" selection="{{selectedItem}}">
           <ul>
