--- a/src/themes/playground/windows/playground.scss
+++ b/src/themes/playground/windows/playground.scss
@@ -7,7 +7,7 @@
 // 2. platform theme aggregating file
 
 //import custom variable overrides
-@import "themeName.web.settings";
+@import "playground.windows.settings";
 
-// import alta aggregating file
-@import "../../../../node_modules/@oracle/oraclejet/dist/scss/alta/oj-alta";
+// import alta-windows aggregating file
+@import "../../../../node_modules/@oracle/oraclejet/dist/scss/alta-windows/oj-alta";
