--- a/src/js/views/collections.html
+++ b/src/js/views/collections.html
@@ -81,6 +81,48 @@
           </ul>
         </oj-tab-bar>
       </div>
+      <div class="oj-flex-item">
+        <oj-data-grid id="datagrid"
+          style="width:100%;height:400px;"
+          aria-label="Data Grid Formatted Row Based Grid Demo"
+          data="[[dataSource]]"
+          selection-mode.row="multiple"
+          banding-interval.row="1"
+          dnd.reorder.row="enable"
+          header.column.renderer="[[oj.KnockoutTemplateUtils.getRenderer('header_template')]]"
+          header.column.style="width:125px"
+          header.column.resizable.width="enable"
+          header.column.resizable.height="enable"
+          cell.renderer="[[oj.KnockoutTemplateUtils.getRenderer('cell_template')]]"
+        ></oj-data-grid>
+
+        <script type="text/html" id="header_template">
+          <!-- ko if: $context.key=='avatar' -->
+              <span data-bind="text: 'Avatar'"></span>
+          <!-- /ko -->
+          <!-- ko if: $context.key=='country' -->
+              <span data-bind="text: 'Country'"></span>
+          <!-- /ko -->
+          <!-- ko if: $context.key=='title' -->
+              <span data-bind="text: 'Title'"></span>
+          <!-- /ko -->
+          <!-- ko if: $context.key=='name' -->
+              <span data-bind="text: 'Name'"></span>
+          <!-- /ko -->
+          <!-- ko if: $context.key=='createdAt' -->
+              <span data-bind="text: 'Created At'"></span>
+          <!-- /ko -->
+        </script>
+
+        <script type="text/html" id="cell_template">
+          <!-- ko if: ($context.keys.column=='name' || $context.keys.column=='title' || $context.keys.column=='country') -->
+            <span data-bind="text: $context.data"></span>
+          <!-- /ko -->
+          <!-- ko if: ($context.keys.column=='avatar') -->
+            <img data-bind="attr: { src: $context.data }" />
+          <!-- /ko -->
+        </script>
+      </div>
       <!-- <oj-module role="main" class="oj-web-applayout-max-width oj-web-applayout-content" config="[[moduleConfig]]">
       </oj-module> -->
       <!-- <span id="results" data-bind='text: collectionsRouter.stateId()'></span> -->
