--- a/src/themes/playground/web/playground.scss
+++ b/src/themes/playground/web/playground.scss
@@ -11,4 +11,109 @@
 
 // import alta aggregating file
 @import "../../../../node_modules/@oracle/oraclejet/dist/scss/alta/oj-alta";
-@import "collections"
+@import "collections";
+
+.tile-header {
+  padding: 10px 0px;
+  font-size: 22px;
+}
+
+.tile-wrapper {
+  padding: 10px;
+}
+
+.visualizations-container {
+  padding: 20px 30px;
+}
+
+.growth-in-data-table {
+  width: 100%;
+  font-size: 28px;
+  color: green;
+  border: 1px solid #aaa;
+  tr, td {
+    border: 1px solid #aaa;
+  }
+
+  td {
+    padding: 5px;
+  }
+
+  span {
+    font-size: 14px;
+    color: #aaa
+  }
+}
+
+.dashboard-table {
+  width: 100%;
+  font-size: 10px;
+  color: #aaa;
+
+  thead {
+    font-size: 12px;
+    td {
+      padding: 12px 10px;
+    }
+  }
+
+  td {
+    padding: 12px 15px;
+
+    &.cell-header {
+      font-size: 12px;
+      padding-left: 0px;
+      color: #666;
+    }
+
+    &.blue-1 {
+      background-color: rgb(84, 109, 161);
+      color: white;
+    }
+
+    &.blue-2 {
+      background-color: rgb(93, 123, 180);
+      color: white;
+    }
+
+    &.blue-3 {
+      background-color: rgb(90, 146, 210);
+      color: white;
+    }
+
+    &.blue-4 {
+      background-color: rgb(125, 174, 230);
+      color: white;
+    }
+
+    &.blue-5 {
+      background-color: rgb(165, 198, 234);
+      color: white;
+    }
+
+    &.red-1 {
+      background-color: rgb(147, 90, 72);
+      color: white;
+    }
+
+    &.red-2 {
+      background-color: rgb(166, 102, 81);
+      color: white;
+    }
+
+    &.red-3 {
+      background-color: rgb(215, 98, 95);
+      color: white;
+    }
+
+    &.red-4 {
+      background-color: rgb(227, 137, 129);
+      color: white;
+    }
+
+    &.red-5 {
+      background-color: rgb(231, 176, 172);
+      color: white;
+    }
+  }
+}
