--- a/src/js/views/visualizations.html
+++ b/src/js/views/visualizations.html
@@ -272,7 +272,7 @@
     </oj-legend>
   </div> -->
   <div class="tile" style="width: 33%">
-    <div class="tile-header">Geographic Distribution</div>
+    <div class="tile-header">Recommendations by Segments</div>
     <div class="tile-wrapper">
       <oj-thematic-map id='map1'
         animation-on-display='auto'
@@ -290,7 +290,7 @@
     </div>
   </div>
   <div class="tile" style="width: 33%">
-    <div class="tile-header">Customer Composition</div>
+    <div class="tile-header">Recommendations by Segments</div>
     <div class="tile-wrapper">
       <oj-chart style="width: 100%" id="barChart" type="bar" orientation="[[orientationValue]]" stack="[[stackValue]]" legend.position="bottom"
         series="[[barSeriesValue]]" groups="[[barGroupsValue]]" animation-on-display="auto" animation-on-data-change="auto" hover-behavior="dim">
