--- a/src/themes/playground/web/playground.scss
+++ b/src/themes/playground/web/playground.scss
@@ -13,6 +13,29 @@
 @import "../../../../node_modules/@oracle/oraclejet/dist/scss/alta/oj-alta";
 @import "collections";
 
+.container {
+  width: 280px;
+  height: 340px;
+  position: relative;
+}
+​
+.cardface {
+  width:100%;
+  height:100%;
+  position:absolute;
+  top:0px;
+  left:0px;
+  backface-visibility: hidden;
+  box-sizing: border-box;
+  border: 1px solid;
+  padding: 10px;
+  background-color: lightgray;
+}
+​
+.backside {
+  transform: rotateY(180deg);
+}
+
 .tile-header {
   padding: 10px 0px;
   font-size: 22px;
