--- a/src/js/views/patterns.html
+++ b/src/js/views/patterns.html
@@ -3,8 +3,13 @@
  The Universal Permissive License (UPL), Version 1.0
  -->
 <div class="oj-hybrid-padding">
-  <h1>Patterns Content Area</h1>
-  <div>
-    Patterns
-  </div>
+  <h1>Data Visualization Designer</h1>
+  <p>Login User: weblogic Password: welcome1</p>
+  <p>
+    <a target="_blank" href="http://den01gqo.us.oracle.com:9502/dv/ui/project.jsp?pageid=visualAnalyzer&reportpath=%2Fusers%2Fweblogic%2FIvan_Revenue_by_PerNameQtr_Product_FilterExpress_RevenueLessThanTargetRevenue">Open Data Visualization Designer</a>
+  </p>
+  <p>
+    <a target="_blank" href="http://den01gqo.us.oracle.com:9502/dv/ui/project.jsp?pageid=visualAnalyzer&reportmode=presentation&reportpath=%2Fusers%2Fweblogic%2FIvan_Revenue_by_PerNameQtr_Product_FilterExpress_RevenueLessThanTargetRevenue">Presentation Mode</a>
+  </p>
+  <iframe width="100%" height="800px" frameBorder="0" src="http://localhost:7780/va/project.jsp?pageid=visualAnalyzer&reportmode=presentation&reportpath=%2Fshared%2F00.%20VA%20Projects%2FGeneral%20Examples%2FSample%20Project"></iframe>
 </div>
